--- a/main.css
+++ b/main.css
@@ -1,86 +1,6 @@
 body{
-	background-color: PaleGreen;
+	background-color: #98e698;
 	font-family: 'Josefin Sans', sans-serif;
 	font-size: 20px;
 
-}
-/* Wrapper */
-.icon-button {
-	background-color: white;
-	border-radius: 3.6rem;
-	cursor: pointer;
-	display: inline-block;
-	font-size: 2.0rem;
-	height: 3.6rem;
-	line-height: 3.6rem;
-	margin: 0 5px;
-	position: relative;
-	text-align: center;
-	-webkit-user-select: none;
-	   -moz-user-select: none;
-	    -ms-user-select: none;
-	        user-select: none;
-	width: 3.6rem;
-}
-
-/* Circle */
-.icon-button span {
-	border-radius: 0;
-	display: block;
-	height: 0;
-	left: 50%;
-	margin: 0;
-	position: absolute;
-	top: 50%;
-	-webkit-transition: all 0.3s;
-	   -moz-transition: all 0.3s;
-	     -o-transition: all 0.3s;
-	        transition: all 0.3s;
-	width: 0;
-}
-.icon-button:hover span {
-	width: 3.6rem;
-	height: 3.6rem;
-	border-radius: 3.6rem;
-	margin: -1.8rem;
-}
-.cow span {
-	background-color: #4099ff;
-}
-.chicken span {
-	background-color: #3B5998;
-}
-.horse span {
-	background-color: #db5a3c;
-}
-
-/* Icons */
-.icon-button i {
-	background: none;
-	color: white;
-	height: 3.6rem;
-	left: 0;
-	line-height: 3.6rem;
-	position: absolute;
-	top: 0;
-	-webkit-transition: all 0.3s;
-	   -moz-transition: all 0.3s;
-	     -o-transition: all 0.3s;
-	        transition: all 0.3s;
-	width: 3.6rem;
-	z-index: 10;
-}
-.icon-button .icon-cow {
-	color: #4099ff;
-}
-.icon-button .icon-chicken {
-	color: #3B5998;
-}
-.icon-button .icon-horse {
-	color: #db5a3c;
-}
-.icon-button:hover .icon-cow,
-.icon-button:hover .icon-chicken,
-.icon-button:hover .icon-horse {
-	color: white;
 }
