--- a/main.css
+++ b/main.css
@@ -6,6 +6,18 @@ body{
 
 }
 
+p{
+	font-size: 25px;
+}
+#label{
+	
+	border-bottom: 4px solid black;
+    background-color: PaleTurquoise;
+}
+#text{
+	font-size: 20px;
+	text-align: justify;
+}
 #homebar{
 	font-size: 40px;
 }
@@ -15,10 +27,6 @@ body{
     width: 40%;;
 }
 
-li{
-	padding-left: 20px;
-
-}
 
 .active {
 	background-color: Thistle;
@@ -34,6 +42,6 @@ div{
 }
 
 .fix{
-    float: right;
+    right: 50%;
 
     }
